--- a/react-hooks/reac-hooks-learning/package.json
+++ b/react-hooks/reac-hooks-learning/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "mobx-learning",
+  "name": "reac-hooks-learning",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "mobx": "^6.1.7",
-    "mobx-react": "^7.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,21 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "babel": {
-    "plugins": [
-      [
-        "@babel/plugin-proposal-decorators",
-        {
-          "legacy": true
-        }
-      ]
-    ],
-    "presets": [
-      "react-app"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.13.5"
   }
 }
